--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "react": "~0.13.1",
     "requirejs-plugins": "~1.0.3",
-    "jsx-requirejs-plugin": "~0.6.0"
+    "jsx-requirejs-plugin": "~0.6.0",
+    "jquery": "~2.1.3",
+    "pure": "~0.6.0"
   }
 }
